# youtube-downloader

./: .dockerignore  .env.example  API.md  Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml  gcp-bootstrap.sh
.github/workflows/: deploy.yml  docker-build.yml
src/: cache.rs  config.rs  error.rs  handlers.rs  job.rs  main.rs  ytdlp.rs
web/: index.html
