[package]
name = "youtube-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
